# lbs2-ndi

./: CMakeLists.txt
.github/workflows/: push.yaml
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini  es-ES.ini
lib/ndi/: Processing.NDI.Lib.h
src/: obs-ndi-output.cpp  obs-ndi-source.cpp  plugin-main.cpp  plugin-main.h
